# Pandaria-5.4.8

./: .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt  ModulesLoader.cpp  ModulesLoader.cpp.in.cmake  ModulesLoader.h  ModulesPCH.h
modules/mod_exemple/src/: mod_exemple.cpp
modules/mod_playerbots/config/: playerbots.conf.dist
modules/mod_playerbots/src/: Playerbots.h  cs_playerbots.cpp  cs_playerbots.h  mod_playerbots.cpp
modules/mod_playerbots/src/AI/: PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIBase.h  PlayerbotSpec.cpp  PlayerbotSpec.h
modules/mod_playerbots/src/Factory/: AiFactory.cpp  AiFactory.h  BotFactory.cpp  BotFactory.h  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h
modules/mod_playerbots/src/Manager/: PlayerbotMgr.cpp  PlayerbotMgr.h  RandomItemManager.cpp  RandomItemManager.h  RandomPlayerbotBracketMgr.cpp  RandomPlayerbotBracketMgr.h  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h
modules/mod_playerbots/src/Travel/: WorldPosition.cpp  WorldPosition.h
modules/mod_playerbots/src/Utils/: Helper.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h
modules/mod_playerbots/src/strategy/: AiObject.cpp  AiObject.h  AiObjectContext.cpp  CustomStrategy.cpp  Engine.cpp  ExternalEventHelper.cpp  HelloStrategy.h  ItemVisitors.cpp  ItemVisitors.h  Strategy.h  StrategyContext.h  Value.cpp  Value.h
modules/mod_playerbots/src/strategy/Dead/: DeadStrategy.cpp  ReleaseSpiritAction.cpp  ReviveFromCorpseAction.cpp  ReviveFromCorpseAction.h
modules/mod_playerbots/src/strategy/RPG/: NewRpgAction.cpp  NewRpgAction.h  NewRpgStrategy.h  NewRpgTrigger.cpp
modules/mod_playerbots/src/strategy/actions/: AcceptInvitationAction.cpp  AcceptInvitationAction.h  ActionContext.h  ActionSayHello.cpp  ActionSayHello.h  AttackActions.cpp  AutoMaintenanceOnLevelupAction.cpp  AutoMaintenanceOnLevelupAction.h  ChangeStrategyAction.cpp  ChangeStrategyAction.h  ChooseTargetActions.cpp  ChooseTargetActions.h  FollowActions.cpp  FollowActions.h  GenericActions.cpp  GenericActions.h  GenericSpellActions.cpp  GenericSpellActions.h  LeaveGroupAction.cpp  LeaveGroupAction.h  MovementActions.cpp  MovementActions.h  PositionAction.cpp  PositionAction.h  RandomBotUpdateAction.cpp  RandomBotUpdateAction.h  ReachTargetActions.cpp  ReachTargetActions.h  RtiAction.cpp  RtiAction.h  SaveManaAction.cpp  SaveManaAction.h  StayActions.h  WorldPacketActionContext.h
modules/mod_playerbots/src/strategy/generic/: CombatStrategy.cpp  ConserveManaStrategy.cpp  ConserveManaStrategy.h  DpsAssistStrategy.cpp  DpsAssistStrategy.h  FleeStrategy.cpp  FleeStrategy.h  FollowMasterStrategy.cpp  FollowMasterStrategy.h  GroupStrategy.cpp  GroupStrategy.h  GuardStrategy.cpp  GuardStrategy.h  MeleeCombatStrategy.cpp  MeleeCombatStrategy.h  MoveFromGroupStrategy.cpp  MoveFromGroupStrategy.h  NonCombatStrategy.cpp  NonCombatStrategy.h  RangedCombatStrategy.cpp  RangedCombatStrategy.h  RunawayStrategy.cpp  RunawayStrategy.h  StayStrategy.cpp  StayStrategy.h  TankAssistStrategy.cpp  TankAssistStrategy.h  ThreatStrategy.cpp  ThreatStrategy.h  WorldPacketHandlerStrategy.cpp  WorldPacketHandlerStrategy.h
modules/mod_playerbots/src/strategy/temporary/: BotAIObjectContext.cpp  BotAIObjectContext.h
modules/mod_playerbots/src/strategy/triggers/: CureTriggers.cpp  CureTriggers.h  GenericTriggers.cpp  GenericTriggers.h  HealthTriggers.cpp  HealthTriggers.h  RangeTriggers.cpp  RangeTriggers.h  TriggerContext.h  WorldPacketTrigger.cpp  WorldPacketTrigger.h  WorldPacketTriggerContext.h
modules/mod_playerbots/src/strategy/value/: ActiveSpellValue.cpp  ActiveSpellValue.h  Arrow.cpp  Arrow.h  AttackerCountValues.cpp  AttackerCountValues.h  AttackerWithoutAuraTargetValue.cpp  AttackerWithoutAuraTargetValue.h  AttackersValue.cpp  AttackersValue.h  CurrentTargetValue.cpp  CurrentTargetValue.h  DistanceValue.cpp  DistanceValue.h  DpsTargetValue.cpp  DpsTargetValue.h  EnemyPlayerValue.cpp  EnemyPlayerValue.h  EstimatedLifetimeValue.cpp  EstimatedLifetimeValue.h  Formations.cpp  Formations.h  GrindTargetValue.cpp  GrindTargetValue.h  GroupValues.cpp  HasTotemValue.cpp  HasTotemValue.h  InvalidTargetValue.cpp  InvalidTargetValue.h  IsBehindValue.cpp  IsBehindValue.h  IsMovingValue.cpp  IsMovingValue.h  (+50 more)
(+747 files in other folders)
